syntax = "proto3";

package connectrpc.eliza.v1;

option go_package = "myapp/backend/gen/connectrpc/eliza/v1;v1";

service ElizaService {
  rpc Say(SayRequest) returns (SayResponse);
  rpc GetRandomPerson(GetRandomPersonRequest) returns (GetRandomPersonResponse);
  rpc GetAppearance(GetAppearanceRequest) returns (GetAppearanceResponse);
  rpc UpdateAppearance(UpdateAppearanceRequest) returns (UpdateAppearanceResponse);
}

message SayRequest {
  string sentence = 1;
}

message SayResponse {
  string sentence = 1;
}

message Person {
  string id = 1;
  string name = 2;
  int32 age = 3;
  string email = 4;
  string department = 5;
  string position = 6;
}

message GetRandomPersonRequest {
  // 空請求，不需要額外參數
}

message GetRandomPersonResponse {
  Person person = 1;
}

message GetAppearanceRequest {
  string id = 1;
}

message GetAppearanceResponse {
  Appearance appearance = 1;
}

message UpdateAppearanceRequest {
  Appearance appearance = 1;
}

message UpdateAppearanceResponse {
  Appearance appearance = 1;
  string message = 2;
}

message Appearance {
  string id = 1;
  string logo_url = 2;
  string primary_color = 3;
  string secondary_color = 4;
  string created_at = 5;
  string updated_at = 6;
  string logo_key = 7;
  int64 logo_size = 8;
  string logo_type = 9;
}
